--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
   get: ^4.5.1
   qr_code_scanner: ^1.0.1
+  http: ^0.13.4
 
 
   # The following adds the Cupertino Icons font to your application.
