--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,12 @@ dependencies:
   get: ^4.5.1
   qr_code_scanner: ^1.0.1
   http: ^0.13.4
+  flutter_launcher_icons: ^0.11.0
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icons/absensiappicon.jpg"
 
 
   # The following adds the Cupertino Icons font to your application.
