add internet permission

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.presensi_bisnis">
+    <uses-permission android:name="android.permission.INTERNET"/>
    <application
         android:label="Presensi App 4IA01"
         android:icon="@mipmap/launcher_icon">
